<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@style/settings_buttons"
            android:id="@+id/id_settings_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:cornerRadius="@dimen/dp_0"
            app:icon="@drawable/vector_arrow_back"
            app:iconGravity="start"
            app:iconPadding="@dimen/dp_8"
            app:iconTint="@color/yp_black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:gravity="left|center"
            android:text="@string/title_settings"
            android:textAppearance="@style/ys_medium_22"
            android:textColor="@color/yp_black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <Button
            style="@style/settings_buttons"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/settings_dark_theme"
            app:cornerRadius="@dimen/dp_0" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="6dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <Button
        style="@style/settings_buttons"
        android:id="@+id/id_settings_share"
        android:text="@string/settings_share_app"
        app:cornerRadius="@dimen/dp_0"
        app:icon="@drawable/vector_share"
        app:iconGravity="end"
        app:iconPadding="@dimen/dp_8"
        app:iconTint="@color/yp_text_gray_settings_icons" />

    <Button
        style="@style/settings_buttons"
        android:id="@+id/id_settings_write_tech"
        android:text="@string/settings_write_tech"
        app:cornerRadius="@dimen/dp_0"
        app:icon="@drawable/vector_support"
        app:iconGravity="end"
        app:iconPadding="@dimen/dp_8"
        app:iconTint="@color/yp_text_gray_settings_icons" />

    <Button
        style="@style/settings_buttons"
        android:id="@+id/id_settings_user_lic"
        android:text="@string/settings_user_lic"
        app:cornerRadius="@dimen/dp_0"
        app:icon="@drawable/vector_arrow_forward"
        app:iconGravity="end"
        app:iconPadding="@dimen/dp_8"
        app:iconTint="@color/yp_text_gray_settings_icons" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <Button
            style="@style/settings_bottom_buttons"

            android:text="@string/title_search"
            android:textColor="@color/yp_black"

            app:icon="@drawable/vector_search"
            app:iconGravity="textTop"
            app:iconPadding="0dp"
            app:iconTint="@color/yp_black" />

        <Button
            style="@style/settings_bottom_buttons"

            android:text="@string/title_library"
            android:textColor="@color/yp_black"

            app:icon="@drawable/vector_library"
            app:iconGravity="textTop"
            app:iconPadding="0dp"
            app:iconTint="@color/yp_black" />

        <Button
            style="@style/settings_bottom_buttons"

            android:text="@string/title_settings"
            android:textColor="@color/yp_blue"

            app:icon="@drawable/vector_settings"
            app:iconGravity="textTop"
            app:iconPadding="0dp"
            app:iconTint="@color/yp_blue" />


    </LinearLayout>
</LinearLayout>