<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_blue"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:padding="12dp"
        android:text="@string/title"
        android:textAppearance="@style/ys_medium_22"
        android:textColor="@color/yp_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/id_button_search"
            style="@style/main_menu_buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_weight="1"
            android:text="@string/title_search"
            app:cornerRadius="@dimen/dp_16"
            app:icon="@drawable/vector_search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/dp_8"
            app:iconTint="@color/yp_black" />

        <Button
            android:id="@+id/id_button_library"
            style="@style/main_menu_buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_weight="1"
            android:text="@string/title_library"
            app:cornerRadius="@dimen/dp_16"
            app:icon="@drawable/vector_library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/dp_8"
            app:iconTint="@color/yp_black" />

        <Button
            android:id="@+id/id_button_settings"
            style="@style/main_menu_buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_weight="1"
            android:text="@string/title_settings"
            app:cornerRadius="@dimen/dp_16"
            app:icon="@drawable/vector_settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/dp_8"
            app:iconTint="@color/yp_black" />
    </LinearLayout>

</LinearLayout>