<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LibraryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yp_white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_for_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.066" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.934" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_outer_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.044" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_outer_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.956" />

        <!--android:contentDescription="@string/menu_button"-->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textColor="@color/yp_black"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/vector_arrow_back" />

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="26dp"
            android:radius="@dimen/dp_8"
            android:src="@drawable/vector_placeholder"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/trackName"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_marginTop="24dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            tools:text="@string/some_text"
            android:textAppearance="@style/ys_medium_22"
            android:textColor="@color/yp_black"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/item_image" />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            tools:text="@string/some_text"
            android:textAppearance="@style/ys_medium_14"
            android:textColor="@color/yp_black"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/trackName" />

        <ImageButton
            android:id="@+id/add_to_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:background="@null"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/artistName"
            app:srcCompat="@drawable/vector_button_add_to_history" />

        <ImageButton
            android:id="@+id/playPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@null"
            android:backgroundTint="@color/yp_black"
            android:clickable="false"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/artistName"
            app:srcCompat="@drawable/vector_button_play" />

        <ImageButton
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:background="@null"
            android:backgroundTint="@color/yp_black"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/artistName"
            app:srcCompat="@drawable/vector_button_like" />

        <TextView
            android:id="@+id/item_trackTime"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/zeroTime"
            android:textAppearance="@style/ys_medium_14"
            android:textColor="@color/yp_black"
            app:layout_constraintEnd_toStartOf="@+id/right_outer_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_outer_guideline"
            app:layout_constraintTop_toBottomOf="@+id/playPause" />

        <TextView
            android:id="@+id/text_only_trackTimeMills"
            style="@style/text_view_in_audio_player"
            android:layout_marginTop="40dp"
            android:text="@string/trackTimeMills"
            android:textColor="@color/yp_text_gray_always"
            app:layout_constraintBottom_toTopOf="@+id/text_only_collectionName"
            app:layout_constraintStart_toStartOf="@+id/left_outer_guideline"
            app:layout_constraintTop_toBottomOf="@+id/item_trackTime" />

        <TextView
            android:id="@+id/text_only_collectionName"
            style="@style/text_view_in_audio_player"
            android:layout_marginTop="16dp"
            android:text="@string/collectionName"
            android:textColor="@color/yp_text_gray_always"
            app:layout_constraintBottom_toTopOf="@+id/text_only_releaseDate"
            app:layout_constraintStart_toStartOf="@+id/left_outer_guideline"
            app:layout_constraintTop_toBottomOf="@+id/text_only_trackTimeMills" />

        <TextView
            android:id="@+id/text_only_releaseDate"
            style="@style/text_view_in_audio_player"
            android:layout_marginTop="16dp"
            android:text="@string/releaseDate"
            android:textColor="@color/yp_text_gray_always"
            app:layout_constraintBottom_toTopOf="@+id/text_only_primaryGenreName"
            app:layout_constraintStart_toStartOf="@+id/left_outer_guideline"
            app:layout_constraintTop_toBottomOf="@+id/text_only_collectionName" />

        <TextView
            android:id="@+id/text_only_primaryGenreName"
            style="@style/text_view_in_audio_player"
            android:layout_marginTop="16dp"
            android:text="@string/primaryGenreName"
            android:textColor="@color/yp_text_gray_always"
            app:layout_constraintBottom_toTopOf="@+id/text_only_country"
            app:layout_constraintStart_toStartOf="@+id/left_outer_guideline"
            app:layout_constraintTop_toBottomOf="@+id/text_only_releaseDate" />

        <TextView
            android:id="@+id/text_only_country"
            style="@style/text_view_in_audio_player"
            android:layout_marginTop="16dp"
            android:text="@string/country"
            android:textColor="@color/yp_text_gray_always"
            app:layout_constraintStart_toStartOf="@+id/left_outer_guideline"
            app:layout_constraintTop_toBottomOf="@+id/text_only_primaryGenreName"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/trackTimeMills"
            style="@style/text_view_in_audio_player"
            android:text="@string/trackTimeMills"
            android:textColor="@color/yp_black"
            app:layout_constraintBottom_toBottomOf="@+id/text_only_trackTimeMills"
            app:layout_constraintEnd_toStartOf="@+id/right_outer_guideline"
            app:layout_constraintTop_toTopOf="@+id/text_only_trackTimeMills" />

        <TextView
            android:id="@+id/collectionName"
            style="@style/text_view_in_audio_player"
            android:layout_width="0dp"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/collectionName"
            android:textColor="@color/yp_black"
            app:layout_constraintBottom_toBottomOf="@+id/text_only_collectionName"
            app:layout_constraintEnd_toStartOf="@+id/right_outer_guideline"
            app:layout_constraintStart_toEndOf="@+id/guideline_for_album"
            app:layout_constraintTop_toTopOf="@+id/text_only_collectionName" />

        <TextView
            android:id="@+id/releaseDate"
            style="@style/text_view_in_audio_player"
            android:text="@string/releaseDate"
            android:textColor="@color/yp_black"
            app:layout_constraintBottom_toBottomOf="@+id/text_only_releaseDate"
            app:layout_constraintEnd_toStartOf="@+id/right_outer_guideline"
            app:layout_constraintTop_toTopOf="@+id/text_only_releaseDate" />

        <TextView
            android:id="@+id/primaryGenreName"
            style="@style/text_view_in_audio_player"
            android:text="@string/primaryGenreName"
            android:textColor="@color/yp_black"
            app:layout_constraintBottom_toBottomOf="@+id/text_only_primaryGenreName"
            app:layout_constraintEnd_toStartOf="@+id/right_outer_guideline"
            app:layout_constraintTop_toTopOf="@+id/text_only_primaryGenreName" />

        <TextView
            android:id="@+id/country"
            style="@style/text_view_in_audio_player"
            android:text="@string/country"
            android:textColor="@color/yp_black"
            app:layout_constraintBottom_toBottomOf="@+id/text_only_country"
            app:layout_constraintEnd_toStartOf="@+id/right_outer_guideline"
            app:layout_constraintTop_toTopOf="@+id/text_only_country" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>